; ModuleID = '/home/carl/AnghaBench/git/extr_http-push.c_curl_setup_http_get.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-push.c_curl_setup_http_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLOPT_HTTPGET = common dso_local global i32 0, align 4
@CURLOPT_URL = common dso_local global i32 0, align 4
@CURLOPT_CUSTOMREQUEST = common dso_local global i32 0, align 4
@CURLOPT_WRITEFUNCTION = common dso_local global i32 0, align 4
@fwrite_null = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @curl_setup_http_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @curl_setup_http_get(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @CURLOPT_HTTPGET, align 4
  %9 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %7, i32 %8, i32 1)
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @CURLOPT_URL, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %10, i32 %11, i8* %12)
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @CURLOPT_CUSTOMREQUEST, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %14, i32 %15, i8* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @CURLOPT_WRITEFUNCTION, align 4
  %20 = load i8*, i8** @fwrite_null, align 8
  %21 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %18, i32 %19, i8* %20)
  ret void
}

declare dso_local i32 @curl_easy_setopt(i32*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
